--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
-    "db": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+    "db": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
