--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest --verbose",
     "db": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src index.js",
+    "start": "node src index.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,9 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "jest": "^26.6.3",
     "superagent": "^6.1.0",
     "supertest": "^6.0.1"
