testing docker pg

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,16 @@ services:
     ports:
       - 3000:3000
     env_file:
-      - ./.env.development.local  
+      - ./.env
+    depends_on:
+      - db  
+
+    db:
+    build:
+      context: ./db
+      dockerfile: Dockerfile
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres    
