--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     ports:
       - 3000:3000
     environment:
+      - PORT=3000
       - PG_HOST=db
       - PG_DB_NAME=crypto
       - PG_PASSWORD=postgres
@@ -23,4 +24,6 @@ services:
       - 5432
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres    
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
